WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279867
Regression(
283525@main
) Crash under VideoReceiverEndpointMessage::decode()
https://bugs.webkit.org/show_bug.cgi?id=279867
Summary
Regression(283525@main) Crash under VideoReceiverEndpointMessage::decode()
Chris Dumez
Reported
2024-09-17 22:22:22 PDT
Crash under VideoReceiverEndpointMessage::decode(): ``` Thread 0 Crashed: 0 WebKit 0x1009c9620 WebKit::VideoReceiverEndpointMessage::decode(NSObject<OS_xpc_object>*) + 316 1 WebKit 0x100a2d2c8 WTF::Detail::CallableWrapper<WebKit::handleXPCEndpointMessage(NSObject<OS_xpc_object>*, char const*)::$_0, void>::call() + 52 2 JavaScriptCore 0x103cf19d8 WTF::RunLoop::performWork() + 204 3 JavaScriptCore 0x103cf2858 WTF::RunLoop::performWork(void*) + 36 4 CoreFoundation 0x18b2d656c __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ + 28 5 CoreFoundation 0x18b2d64b0 __CFRunLoopDoSource0 + 176 6 CoreFoundation 0x18b2d5bd0 __CFRunLoopDoSources0 + 244 7 CoreFoundation 0x18b2cfd1c __CFRunLoopRun + 840 ```
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2024-09-17 22:22:30 PDT
<
rdar://136109454
>
Chris Dumez
Comment 2
2024-09-17 22:28:01 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33808
EWS
Comment 3
2024-09-18 07:29:36 PDT
Committed
283840@main
(a7cb96345601): <
https://commits.webkit.org/283840@main
> Reviewed commits have been landed. Closing PR #33808 and removing active labels.
EWS
Comment 4
2024-10-02 16:53:26 PDT
Committed
283286.179@safari-7620-branch
(b2326449dd18): <
https://commits.webkit.org/283286.179@safari-7620-branch
> Reviewed commits have been landed. Closing PR #1957 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug