Regression(283525@main) Crash under VideoReceiverEndpointMessage::decode() https://bugs.webkit.org/show_bug.cgi?id=279867 rdar://136109454

Reviewed by Andy Estes.

The media code was constructing an ObjectIdentifier with WTF::HashTableDeletedValue,
which is only meant to be used by the HashTable implementation. The intention was
to create an "invalid" / missing ObjectIdentifier. The correct way to do so is to
call ObjectIdentifier's default constructor (which will use 0 as underlying value).

In the future, we should really switch to a std::optional though as we're working
towards making ObjectIdentifier always valid.

* Source/WebCore/platform/graphics/MediaPlayer.h:
(WebCore::MediaPlayerClient::mediaPlayerClientIdentifier const):
* Source/WebKit/UIProcess/Cocoa/PlaybackSessionManagerProxy.mm:
(WebKit::PlaybackSessionManagerProxy::uncacheVideoReceiverEndpoint):

Canonical link: https://commits.webkit.org/283840@main